Started on the skill system and there is now a toggled menu on the HUD as well as skills that can be added to the player manually

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/GameSlice.GI_Main
 GameDefaultMap=/Game/Maps/UILevels/LV_MainMenu.LV_MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Maps/GM_DemoLevel.GM_DemoLevel_C
+GlobalDefaultGameMode=/Game/ThirdPersonCharacter/BP_GameSliceGameMode.BP_GameSliceGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
