--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -125,6 +125,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Display Quest Log ",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="Talk to characters",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++ActionMappings=(ActionName="Toggle Skill Window",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=M)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
