--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -127,6 +127,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="Toggle Skill Window",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +ActionMappings=(ActionName="Toggle Controls Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="Toggle AI Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
