Changed packaging types

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=91FF88204820C43CF29F749A77DAD3F2
-ProjectName=Third Person Game Template
+ProjectName=A Road More Travelled
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "D7095B1042DB87F236F02D9EDF2B43AD", "A Road More Travelled")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "284F63024C7698E7DBAC85A894FD660C", "A Road More Travelled")
+CompanyName=The Rats
+CompanyDistinguishedName=The Distinguished Rats
+Description=BSc3a and Bsc3b project complete
+
