Slightly neater nodes

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=91FF88204820C43CF29F749A77DAD3F2
-ProjectName=Third Person Game Template
+ProjectName=A Road More Travelled
+CompanyName=The Rats
+CompanyDistinguishedName=The Rats
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "3A8C748944EA7F87B6631E9D56ED0FA9", "A Road More Travelled")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "211C290B417397270AA920A50205A515", "A Road More Travelled")
+
